Revision history for Dancer-Plugin-SimpleCRUD 

1.01    2016-09-10
        [ ENHANCEMENTS ]
        - Add search options for Less Than, Less Than or Equal To, 
          Greater Than, and Greater Than or Equal To. (joshrabinowitz)
        - Searches default to equality test of key_column. (joshrabinowitz)

1.00    2016-09-05
        [ ENHANCEMENTS ]
        - Allow where_filter to be a coderef, for runtime determination
          of criteria
        - Better document hook support & other doc improvements
        - where_filter extended to cover other routes
        - CSS classes on tables (jackson-tim)
        - custom_columns can now be ordered

        [ BUGFIXES ]
        - avoid accidental URL injections (joshrabinowitz)
        - Require CGI::FormBuilder 3.10 to avoid uninitialized
          var warnings (joshrabinowitz)


0.99    2016-08-11
        [ ENHANCEMENTS ]
        - Add where_filter option, for easy display and 
        editing of subsets of tables.  (joshrabinowitz)

0.98    2016-07-26
        [ ENHANCEMENTS ]
        - allow searching for 0 (joshrabinowitz)
        - improve search descriptions (joshrabinowitz)
        - make searchtype option menu stick (joshrabinowitz)
        - basic tests (joshrabinowitz)

0.97    2016-07-23
        [ ENHANCEMENTS ]
        - Allow for searching on non-alphanumerics (joshrabinowitz)
        - Add support for Does Not Contain / Does Not Equal searches 
          (joshrabinowitz)
        - Show query in search box in search results (joshrabinowitz)
        [BUG FIXES]
        - More careful about url/html injections (joshrabinowitz)

0.96    2016-07-22
        [ BUG FIXES ]
        - Fix uninitialized value errors when re-sorting and downloading
          searches (joshrabinowitz)
        - less cryptic error message when you specify a non-existent table
          (msouth)
        [ ENHANCEMENTS ]
        - view route (/prefix/view/:id) (msouth)

0.95    2016-07-21
        [ BUG FIXES ]